--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "isomorphic-unfetch": "^3.1.0",
     "next": "9.5.5",
+    "next-pwa": "^3.1.5",
     "next-seo": "^4.14.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.2",
