--- a/front/package.json
+++ b/front/package.json
@@ -12,23 +12,24 @@
   "dependencies": {
     "babel-eslint": "^10.1.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-config-react-app": "^5.2.1",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "isomorphic-unfetch": "^3.1.0",
-    "next": "9.5.5",
+    "next": "10.0.0",
     "next-pwa": "^3.1.5",
     "next-seo": "^4.14.0",
+    "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.2",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "tailwindcss": "^1.9.5"
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "tailwindcss": "^1.9.6"
   }
 }
