--- a/front/public/manifest.json
+++ b/front/public/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "Сайт Бочкарева Ивана",
   "theme_color": "#317EFB",
   "background_color": "#2196f3",
-  "display": "browser",
+  "display": "standalone",
   "scope": "/",
   "start_url": "/",
   "icons": [
@@ -41,7 +41,15 @@
       "src": "/android-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "density": "4.0"
+      "density": "4.0",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/android-icon-192x192.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "density": "4.0",
+      "purpose": "any maskable"
     }
   ]
 }
